# finite-diff-oxidized

./: .gitignore  Cargo.toml  display.py
docs/examples/: example_config.yaml
src/: main.rs  object.rs
