[package]
name = "finite_diff_oxidized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ndarray = "0.16.1"
yaml-rust = "0.4.5"

[profile.release]
opt-level=3
